impleented API_KEY and implemented checkout page with cart system

--- a/game-store/.env.sample
+++ b/game-store/.env.sample
@@ -1,4 +1,5 @@
 # Add your api key here.
 
-VITE_RAWG_API_KEY=
+VITE_RAWG_API_KEY='2627e9d65b584424b8b3de3f82bd04ef'
 
+jh=2627e9d65b584424b8b3de3f82bd04ef
